# fashionRecommendation

./: README.md  log.txt
data/: readme
data/Polyvore_large/: readme
data/clean_brokenImgs/cleaner/: CMakeLists.txt  CMakeLists.txt~
data/clean_brokenImgs/cleaner/results/: broken_imgs.txt
data/clean_brokenImgs/cleaner/src/: demo.cpp  demo.cpp~
models/VGG_M_2048/: VGG_CNN_M_2048_deploy.prototxt
models/fashionNet_1/: README.md  fashion_deploy_1.prototxt  fashion_solver_1.prototxt  fashion_train_val_1.prototxt
models/fashionNet_2/: README.md  fashion_deploy_2.prototxt  fashion_solver_2.prototxt  fashion_train_val_2_1.prototxt  fashion_train_val_2_2.prototxt  training.sh
models/fashionNet_3/: README.md  README.md~  fashion_deploy_3.prototxt  fashion_solver_3.prototxt  fashion_train_val_3.prototxt  testing.sh  training.sh
models/fashionNet_3_dell/: README.md  fashion_solver_3.prototxt  fashion_train_val_3.prototxt
models/fashionNet_4/: README.md  fashion_deploy_4.prototxt  fashion_solver_4.prototxt  fashion_train_val_4.prototxt
models/fashionNet_5/: README.md  fashion_deploy_5.prototxt  fashion_solver_5.prototxt  fashion_train_val_5_1.prototxt  fashion_train_val_5_2.prototxt
models/fashionNet_6/: README.md  (+3 more)
util/: data_prep.sh  data_prep2.sh  data_prep3.sh  fashion_predict.ipynb  fashion_train.ipynb  get_ndcg.py  lmdb4.ipynb  lmdb5.ipynb  proto2npy2jpg.ipynb  shuffle_tuples.ipynb  supplements.py  train_lmdb_for_binary_classification.py  train_lmdb_for_binary_classification.sh  train_lmdb_for_binary_classification2.py  train_top_prep.ipynb
(+683 files in other folders)
